[gd_scene load_steps=2 format=3 uid="uid://0d5edy8iikhq"]

[ext_resource type="Script" path="res://scenes/components/trait_text_box/trait_text_box_component.gd" id="1_kdh2j"]

[node name="TraitTextBoxComponent" type="Area2D"]
script = ExtResource("1_kdh2j")

[node name="TraitTextBox" type="RichTextLabel" parent="."]
offset_left = 19.0
offset_top = -61.0
offset_right = 307.0
offset_bottom = -15.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
